# AegisCore

./: .env.example  .gitignore  AGENTS.md  AegisCore.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md
python/: Dockerfile  README.md  battle_features.Dockerfile  battle_graph.Dockerfile  battle_partition.Dockerfile  battle_role_scoring.Dockerfile  bloc_intel.Dockerfile  counter_intel.Dockerfile  graph_universe_sync.Dockerfile  intel_copilot.Dockerfile  killmail_ingest.Dockerfile  killmail_search.Dockerfile  market_importer.Dockerfile  market_poller.Dockerfile  outbox_relay.Dockerfile  pyproject.toml  requirements-battle-features.txt  requirements-battle-graph.txt  requirements-battle-partition.txt  requirements-battle-role-scoring.txt  requirements-bloc-intel.txt  requirements-counter-intel.txt  requirements-dev.txt  requirements-graph.txt  requirements-intel-copilot.txt  requirements-killmail-ingest.txt  requirements-killmail-search.txt  requirements-market-import.txt  requirements-market.txt  requirements-outbox-relay.txt  requirements-sde.txt  requirements-theater.txt  requirements.txt  theater_clustering.Dockerfile
python/battle_features/: README.md  __init__.py  __main__.py  cli.py  config.py  db.py  extract.py  inputs.py  log.py  persist.py  profiles.py
python/battle_graph/: README.md  __init__.py  __main__.py  cli.py  compute.py  config.py  db.py  edges.py  inputs.py  log.py  persist.py  profiles.py  runs.py
python/battle_partition/: README.md  __init__.py  __main__.py  cli.py  config.py  db.py  inputs.py  log.py  partition.py  persist.py  profiles.py
(+938 files in other folders)
